# supervisionary

./: Cargo.toml  LICENSE  README.markdown  README.md  rustfmt.toml
driver/: Cargo.toml  README.markdown
driver/src/: main.rs
kernel/: Cargo.toml  README.markdown
kernel/src/: _type.rs  error_code.rs  handle.rs  kernel_panic.rs  lib.rs  name.rs  runtime_state.rs  term.rs  theorem.rs
libsupervisionary/: Cargo.toml  README.markdown
libsupervisionary/src/: _type.rs  constant.rs  error_code.rs  handle.rs  lib.rs  term.rs  theorem.rs  type_former.rs
libsupervisionary/src/raw/: _type.rs  constant.rs  mod.rs  term.rs  theorem.rs  type_former.rs
paper/: Makefile  paper.tex  prisc-2022.bbl  prisc-2022.bib  prisc-2022.tex
src/: lib.rs
src/kernel/: _type.rs  constant.rs  error_code.rs  handle.rs  host_interface.rs  kernel_panic.rs  mod.rs  name.rs  runtime_state.rs  term.rs  theorem.rs  type_former.rs
src/wasmi/: host_interface.rs  mod.rs  panic.rs
tests/: README.markdown
tests/type/: Cargo.toml
tests/type/src/: main.rs
tests/type_former/: Cargo.toml
tests/type_former/src/: main.rs
wasmi-bindings/: Cargo.toml  README.markdown
wasmi-bindings/src/: abi_types.rs  hostcall_number.rs  lib.rs  runtime_state.rs  runtime_trap.rs  system_call_numbers.rs  system_interface_types.rs  type_checking.rs
