[package]
name       = "kernel"
version    = "0.1.0"
authors    = ["The Supervisionary Development Team"]
edition    = "2018"
desription = "The Supervisionary kernel code."

[features]
wasmi-hosterror = ["wasmi"]

[dependencies]
env_logger  = "0.8.2"
lazy_static = "1.4.0"
log         = "0.4.14"
wasmi       = { version = "0.9.0", optional = true }
